--- a/main.tex
+++ b/main.tex
@@ -178,7 +178,7 @@ beta power, interval timing, and reaction time.  As beta power has
 been found to increase the length of estimated time intervals
 \cite<e.g.>{kononowicz_beta_2014}, and interval timing has been shown
 to play a role in reaction time tasks via expectancy effects
-\cite<e.g.>{grosjean_timing_2001}, we hypothesise that beta power can
+\cite<e.g.>{grosjean_timing_2001}, we hypothesize that beta power can
 be used to predict the expectancy, and hence the response speed, in a
 reaction time task.
 
@@ -240,7 +240,7 @@ keyboard with a polling rate above 200 Hz. A 27'' monitor (iiyama
 ProLite G2773HS; $1920 \times 1080$ pixels, 120 Hz) was employed.
 
 \subsection{Data preprocessing}
-Raw EEG data was filtered offline with a bandpass filter using 1-40
+Raw EEG data was filtered offline with a band-pass filter using 1-40
 Hz, as well as a 49-51 Hz notch filter to remove noise from electronic
 devices in the room.
 
@@ -582,7 +582,7 @@ violated.
 
 \subsection{Brain Computer Interface}
 A technical mistake in the implementation of the beta power
-calculation led to a longterm drift in the beta values, so that the
+calculation led to a long-term drift in the beta values, so that the
 BCI algorithm categorized almost all trials as either high or
 low. Thus, the BCI did not provide the intended benefit of obtaining
 as many non-standard interval lengths on trials with non-average beta
