tiny changes to text; build.sh takes care of removed paragraphs in diff

--- a/main.tex
+++ b/main.tex
@@ -124,16 +124,15 @@ However, in a replication of this experiment
 % tapping -> off/onset same -> no causality
 More recently, the power of neuronal oscillations in the beta band was
 found to be another measure that is predictive of the length of
-produced intervals.
-
-\citeA{jenkinson_new_2011} suggested that beta power in the basal
-ganglia provides an index of the likelihood that a voluntary movement
-will be required, with a low beta power indicating a high probability.
-Indeed, \citeA{joundi_persistent_2013} found that in a task where
-participants were instructed to tap along with an external rhythm,
-beta power was lower during the tapping.  Furthermore, they found that
-with high tapping rates, beta activity could not fully resynchronize
-between taps.                                                           % why is this important? -> separate, long intervals
+produced intervals. \citeA{jenkinson_new_2011} suggested that beta
+power in the basal ganglia provides an index of the likelihood that a
+voluntary movement will be required, with a low beta power indicating
+a high probability.  Indeed, \citeA{joundi_persistent_2013} found that
+in a task where participants were instructed to tap along with an
+external rhythm, beta power was lower during the tapping.
+Furthermore, they found that with high tapping rates, beta activity
+could not fully resynchronize between
+taps.  % why is this important? -> separate, long intervals
 
 Along similar lines, \citeA{bartolo_information_2014} used beta power
 to predict the interval length in a synchronization-continuation
@@ -501,7 +500,7 @@ As expected from previous studies \cite<e.g.,>{karlin_reaction_1959,
 slower in trials with short intervals, and faster in trials with long
 intervals. The decrease in response speed for short intervals can be
 accounted for by the fact that participants are likely not yet
-prepared to react, as they don't expect the stimulus to occur at this
+prepared to react, as they do not expect the stimulus to occur at this
 time.
 
 The faster response speed on trials with long intervals is more
@@ -544,7 +543,7 @@ temporal expectations, which involve multiple different brain areas,
 but not the basal ganglia \cite{coull_dissociating_2008}.  As the beta
 power that is associated with timing functions has been described as
 originating from the basal ganglia, and only in studies employing
-explicit timing tasks \cite<e.g.>{joundi_persistent_2013,
+explicit timing tasks \cite<e.g.,>{joundi_persistent_2013,
   bartolo_information_2014}, it is plausible that beta power does not
 index the implicit timing required for the present study.  Thus, our
 finding that beta power is not suited as a predictor of reaction time
@@ -588,7 +587,6 @@ low. Thus, the BCI did not provide the intended benefit of obtaining
 as many non-standard interval lengths on trials with non-average beta
 values as possible. Instead, length conditions were distributed
 randomly without regard for the beta power in the current trial.
-
 Given the potential benefit of a more beneficial distribution of
 conditions, combined with no negative effects in case of failure, the
 kind of BCI used in the present study can safely be used in future
