more small changes

--- a/main.tex
+++ b/main.tex
@@ -447,11 +447,13 @@ time when the stimulus is expected to occur. This supports research by
 \citeA{naatanen_diminishing_1970}, who argued that the increase in
 response speed in fact stems from the passage of time. As participants
 know that the stimulus will occur eventually, the more time passes,
-the likelier it becomes that it will occur in the next moment. This
-perspective leads to the prediction that reaction time becomes faster
-the more time elapses before the stimulus, which is in fact what we
-found. It would be an intriguing question for future research over
-what time span this effect holds.
+the likelier it becomes that it will occur in the next moment
+\cite<referred to in the literature as the \emph{hazard rate};
+e.g.,>{kononowicz_decoupling_2014}. This perspective leads to the
+prediction that reaction time becomes faster the more time elapses
+before the stimulus, which is in fact what we found. It would be an
+intriguing question for future research over what time span this
+effect holds.
 
 It is interesting to note that we obtained similar results as previous
 research in spite of significant differences in experimental
@@ -527,9 +529,9 @@ We found evidence for an effect of interval length on reaction time,
 in line with previous research \cite{naatanen_diminishing_1970,
   karlin_reaction_1959, drazin_effects_1961,
   grosjean_timing_2001}. Beta power, however, was found not to be
-suitable as a predictor, which confirms brain imaging studies that
-found that explicit and implicit timing activates different brain
-regions \cite{coull_dissociating_2008}.
+suitable as a predictor, which can be explained by brain imaging
+studies that found that explicit and implicit timing activates
+different brain regions \cite{coull_dissociating_2008}.
 
 \bibliographystyle{apacite}
 \bibliography{/home/max/Dropbox/Psychology/Thesis/latex/clean_references}
