--- a/main.tex
+++ b/main.tex
@@ -497,19 +497,16 @@ task required participants to wait for an external cue to
 respond. Thus, our finding might suggest that internally and
 externally cued tasks employ different timing mechanisms.
 
-\subsection{Limitations}
-The findings might have been influenced by limitations of the
-study. The room in which the experiment was conducted was not
-electrically shielded, resulting in a lot of noise in the EEG
-signal. Furthermore, we did not use the FCz electrode as
-\citeA{kononowicz_beta_2014} did, but electrodes surrounding
-it. However, post-hoc analyses revealed a significant relationship
-between subjects' mean beta power and mean reaction time, indicating
-that beta activity was measured in a meaningful way.
-
-Moreover, our data did not satisfy all assumptions of the linear
-regression model; normality, independence, and linearity were
-violated.
+Lastly, the room in which the experiment was conducted was not
+electrically shielded, resulting in a lot of noise in the EEG signal,
+which might have masked the effect. Furthermore, we did not use the
+FCz electrode as \citeA{kononowicz_beta_2014} did, but electrodes
+surrounding it. Regarding these two issues, however, post-hoc analyses
+revealed a significant relationship between subjects' mean beta power
+and mean reaction time, indicating that beta activity was measured in
+a meaningful way. Moreover, our data did not satisfy all assumptions
+of the linear regression model; normality, independence, and linearity
+were violated.
 
 \subsection{Brain Computer Interface}
 A technical mistake in the implementation of the beta power
@@ -535,6 +532,5 @@ different brain regions \cite{coull_dissociating_2008}.
 
 \bibliographystyle{apacite}
 \bibliography{/home/max/Dropbox/Psychology/Thesis/latex/clean_references}
-
 
 \end{document}
