final final touch

--- a/main.tex
+++ b/main.tex
@@ -63,9 +63,9 @@
 
   Results confirm the finding that deviations from the expected
   pre-stimulus interval influence response speed as expected, but
-  clearly show beta activity to be non-predictive. This confirms brain
-  imaging studies that revealed different neural structures to be
-  responsible for implicit and explicit timing tasks.}
+  clearly show beta activity to be non-predictive. This is in line
+  with brain imaging studies that revealed different neural structures
+  to be responsible for implicit and explicit timing tasks.}
 
 \keywords{beta power, interval timing, reaction
   time, variable foreperiods}
@@ -156,15 +156,14 @@ interval \cite<see>{kononowicz_beta_2014}.
 
 In line with the findings of \citeA{grosjean_timing_2001}, reaction
 times were hypothesized to be slower for the shorter interval, and
-faster on trials with the longer interval.
-
-In addition, we expected reaction times to be faster in trials where
-beta power is low, because participants hypothetically estimate the
-interval to end sooner than it actually does, and are thus very ready
-to respond when the stimulus finally does occur.  Conversely, in
-trials with high beta power, participants should estimate the stimulus
-to occur later than it does, and thus not be prepared for it when it
-actually occurs, leading to a slower reaction time.
+faster on trials with the longer interval. In addition, we expected
+reaction times to be faster in trials where beta power is low, because
+participants hypothetically estimate the interval to end sooner than
+it actually does, and are thus very ready to respond when the stimulus
+finally does occur.  Conversely, in trials with high beta power,
+participants should estimate the stimulus to occur later than it does,
+and thus not be prepared for it when it actually occurs, leading to a
+slower reaction time.
 
 \section{Method}
 \subsection{Participants}
@@ -483,7 +482,7 @@ explicit timing tasks \cite<e.g.,>{joundi_persistent_2013,
   bartolo_information_2014}, it is plausible that beta power does not
 index the implicit timing required for the present study.  Thus, our
 finding that beta power is not suited as a predictor of reaction time
-reinforces the idea proposed by \citeA{coull_dissociating_2008} that
+aligns with the idea proposed by \citeA{coull_dissociating_2008} that
 implicit and explicit timing employ different neural structures.
 
 Another possible reason for beta power not being useful to predict
@@ -497,7 +496,7 @@ task required participants to wait for an external cue to
 respond. Thus, our finding might suggest that internally and
 externally cued tasks employ different timing mechanisms.
 
-Lastly, the room in which the experiment was conducted was not
+Lastly, the room in which the experiment was run in was not
 electrically shielded, resulting in a lot of noise in the EEG signal,
 which might have masked the effect. Furthermore, we did not use the
 FCz electrode as \citeA{kononowicz_beta_2014} did, but electrodes
