change second supervisor

--- a/main.tex
+++ b/main.tex
@@ -38,9 +38,9 @@
   University of Groningen
 
   \vspace{1cm}
-  Supervised by: Dr. Hedderik van Rijn
+  Supervised by: Dr. D. H. van Rijn
 
-  Secondary evaluator: Udo Boehm
+  Secondary evaluator: Dr. E. G. Akyurek
 
   In collaboration with: Simon Kock, Niklas Fasching, and Robbert van der Mijn
 }
